--- a/newapp.yaml
+++ b/newapp.yaml
@@ -1,28 +1,19 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: newapps.apps.test.dev           # The name of the 
-CRD (plural form)
+  name: newapps.apps.test.dev           
 spec:
-  group: apps.test.dev                  # API group for the 
-custom resource
+  group: apps.test.dev                  
   names:
-    kind: NewApp                        # Kind of the 
-custom resource
-    listKind: NewAppList                # List kind for the 
-custom resource
-    plural: newapps                     # Plural name used 
-in API calls
+    kind: NewApp                        
+    listKind: NewAppList                
+    plural: newapps                     
     singular: newapp                    # Singular name
-  scope: Namespaced                     # Scope can be 
-"Namespaced" or "Cluster"
+  scope: Namespaced                    
   versions:
-    - name: v1                          # Version of the 
-custom resource
-      served: true                      # Enable serving 
-this version
-      storage: true                     # Set as storage 
-version
+    - name: v1                         
+      served: true                      
+      storage: true                     
       schema:
         openAPIV3Schema:
           type: object
@@ -33,5 +24,4 @@ version
                 image:
                   type: string
       subresources:
-        status: {}                      # Enables the 
-`.status` subresource
+        status: {}                      
